Reorganize documentation structure in docs.yml

--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -1,4 +1,15 @@
-- title: Publications
+
+- title: User Guide 
+  pages: 
+  - raser 
+
+
+  - title: Publications
+  pages:
+    - publications/p11_irrad_atlas18_itk
+
+    
+  - title: P1 - P10 
   pages:
     - publications/p10_sic_pin_high_T
     - publications/p9_SiC_LGAD
@@ -11,8 +22,5 @@
     - publications/p2_sic_3d
     - publications/p1_sic_pin
 
-- title: User Guide 
-  pages: 
-  - raser 
 
 
